# audio_responsive_leds

./: Animator.hpp  CMakeLists.txt  Color.hpp  main.cpp  setup.cpp  setup.hpp
SoundLib/: CMakeLists.txt  main.cpp
SoundLib/include/: processor.h  recorder.h  tsqueue.h
SoundLib/src/: processor.cpp  recorder.cpp
rpi_ws281x/: main.c
